# pywal

./: .gitignore  LICENSE.md  README.md  devbox.json  pyproject.toml
pywal/: util.py
tests/: test_colors.py  test_export.py
